--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.36",
+    "bcrypt": "^1.0.3",
+    "classnames": "^2.2.5",
     "create-react-class": "^15.6.3",
     "jscs": "^3.0.7",
     "meteor-node-stubs": "^0.3.2",
@@ -13,5 +15,8 @@
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-meteor-data": "^0.2.11"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2"
   }
 }
